--- a/style.css
+++ b/style.css
@@ -1,22 +1,48 @@
+h1, h2, p{
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	margin: 0px;
+	padding: 5px;
+}
+
+.hf_text{
+	color: white;
+}
+
+.title_text{
+	text-align: center;
+}
+
+.para_text{
+	text-align: center;
+}
+
 .header
 {
 	background-color: #008338;
 	width: 100%;
 	height: 135px;
-	
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
 
-	.ccis, .comsoc
+	.header_icons img
 	{
+		margin-left: 10px;
 		width: 100px;
 		height: 100px;
-		vertical-align: center;
 	}
 
-	.menu
+	.header_title h1
 	{
+		margin-left: -125px;
+	}
+
+	.header_menu img
+	{
+		margin-right: 10px;
+		padding: 10px;
+		background-color: #23A65B;
 		width: 75px;
 		height: 75px;
 }
@@ -24,19 +50,18 @@
 .nav
 {
 	background-color: #23A65B;
-	height: 50px;
 }
 
-	.path
+	.nav h3
 	{
-		margin: 0px;
-		padding: 0px;
+		margin: 0px 0px 0px 10px;
+		padding: 10px;
 	}
 
 .body
 {
 	width: 100%;
-	height: 700px;
+	height: auto;
 }
 
 	.body_featured
@@ -46,7 +71,7 @@
 	
 	}
 	
-		.featuredimg
+		.body_featured img
 		{
 			object-fit: cover;
 			width: 100%;
@@ -57,42 +82,92 @@
 	{
 		display: flex;
 		flex-direction: row;
+		width: 100%;
 	}
-
+	
 		.body_value
 		{
-			margin: auto;
+			background-color: #D0AFFC;
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			justify-content: space-evenly;
+			width: 60%;
+			margin: 10px;
+			padding: 10px;
 		}
-			.value_title
-			{
-				text-align: center;
-			}
-			
-			.value_para
-			{
-				text-align: center;
-			}
 		
-			.value_img
+			.value
 			{
-				object-fit: cover;
-				width: 175px;
-				height: 175px;
-				justify-content: center;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
 			}
-			
-			.value_button
-			{
-			}
-		
-		.body_gallery
-		{
-			
-		}
 
-.footer
-{
+				.value h2, p{
+					padding: 10px;
+				}
+			
+				.value img
+				{
+					object-fit: cover;
+					width: 200px;
+					height: 200px;
+					justify-content: center;
+				}
+
+		.body_gallery{
+			background-color: #D0AFFC;
+			margin: 10px;
+			width: 40%;
+		}
+		
+			.body_gallery h2{
+				text-align: center;
+			}
+
+			.gallery_content{
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				margin-top: 50px;
+			}
+
+				.arrow-left{
+					width: 10%;
+					height: 10%;
+				}
+
+				.selected-img{
+					object-fit: cover;
+					width: 80%;
+					height: auto;
+				}
+
+				.arrow-right{
+					width: 10%;
+					height: 10%;
+					rotate: 180deg;
+				}
+
+.footer{
 	background-color: #008338;
 	width: 100%;
 	height: 150px;
+	display: flex;
 }
+
+.footer a{
+	color: white;
+	text-decoration: none;
+}
+
+	.footer_details{
+		width: 50%;
+		margin-left: 10px;
+	}
+
+	.footer_socials{
+		width: 50%;
+		margin-left: 10px;
+	}
